bug/minor: fix text overflow with long lines (#4)
Fix an issue with text shared with long lines overflowing the container.

also make the container wider.

---------

--- a/src/main.css
+++ b/src/main.css
@@ -154,7 +154,8 @@ hr.long {
 
 #textDiv > p {
     margin-top: 25px;
-    width: 50%;
+    overflow: scroll;
+    width: 75%;
 }
 
 
